<resources>
    <string name="app_name">MyGarage</string>
    <string name="title_home">Home</string>
    <string name="title_equipment">Equipment</string>
    <string name="title_rooms">Rooms</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_profile">Profile</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="signup"><u>signup</u></string>
    <string name="new_here">new here?</string>
    <string name="sign_up">Sign Up</string>
    <string name="go_back"><u>go back</u></string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="reserve_room">Reserve Room</string>
    <string name="tv_next">Next</string>
    <string name="onboarding_title1">Welcome to MyGarage</string>
    <string name="onboarding_description1">An app to utilize the EspooGarage
to its full potential</string>
    <string name="onboarding_title2">Reserve rooms</string>
    <string name="onboarding_description2">Reserve different rooms such as
media lab for uninterrupted work</string>
    <string name="onboarding_title3">Book equipments</string>
    <string name="onboarding_description3">Reserve different tools and let others know about the availibility of the tools</string>
    <string name="onboarding_title4">Check your calendar</string>
    <string name="onboarding_description4">Check your calendar to reserve any
equipment or room</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="jane_doe_nokia_fi">jane.doe@nokia.fi</string>
    <string name="jane_doe">Jane Doe</string>
    <string name="media_lab">Media Lab</string>
    <string name="work_shop">Work Shop</string>
    <string name="articles">Articles</string>
    <string name="title">title</string>
    <string name="printers_3d">3D printers</string>
    <string name="vr_headsets">VR headsets</string>
    <string name="cameras">Cameras</string>
    <string name="others">Others</string>
    <string name="pick_a_time_and_date">Pick a time and date</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="pick_a_time">Pick a time</string>
    <string name="save_reservation">Save reservation</string>
    <string name="error">error</string>
    <string name="please_fill_all_fields">Please fill all fields and make sure you have a valid email</string>
    <string name="your_reservations">Your reservations</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="loading">Loading...</string>
    <string name="save_edit">Save edit</string>
    <string name="delete_reservation">Delete reservation</string>
    <string name="try_again">Try Again</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="check_your_internet_connection_and_try_again">Check your Internet Connection and Try Again</string>
    <string name="pick_a_start_date_and_time">Pick a start date and time</string>
    <string name="pick_a_end_date_and_time">Pick a end date and time</string>
    <string name="close_button">close button</string>
    <string name="close">close</string>
    <string name="hello">Hello</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="there_are_currently_no_reservations">There are currently no reservations</string>
    <string name="you_do_not_have_any_reservations_yet">You do not have any reservations yet</string>
</resources>