<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mygarage.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_equipment"
        android:name="com.example.mygarage.ui.equipment.EquipmentFragment"
        android:label="@string/title_equipment"
        tools:layout="@layout/fragment_equipment" />

    <fragment
        android:id="@+id/navigation_rooms"
        android:name="com.example.mygarage.ui.rooms.RoomsFragment"
        android:label="@string/title_rooms"
        tools:layout="@layout/fragment_rooms" />
    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.mygarage.ui.calendar.CalendarFragment"
        android:label="calendar_fragment"
        tools:layout="@layout/calendar_fragment" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.mygarage.ui.profile.ProfileFragment"
        android:label="profile_fragment"
        tools:layout="@layout/profile_fragment" />
</navigation>